# xml_tools

./: .gitattributes  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  xml.bzl
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh
private/: BUILD.bazel  builder.bzl  dom.bzl  parser.bzl  serializer.bzl
tests/: BUILD.bazel  builder_test.bzl  content_test.bzl  element_access_test.bzl  navigation_test.bzl  search_test.bzl  serialization_test.bzl  type_checking_test.bzl  xml_parser_test.bzl
tools/gazelle/: BUILD.bazel
xml/: BUILD.bazel  defs.bzl
xml/private/: BUILD.bazel  dom.bzl  parser.bzl  tokenizer.bzl
xml/tests/: BUILD.bazel  content_test.bzl  element_access_test.bzl  navigation_test.bzl  search_test.bzl  serialization_test.bzl  type_checking_test.bzl  xml_parser_test.bzl
