load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "tokenizer",
    srcs = ["tokenizer.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "parser",
    srcs = ["parser.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":tokenizer"],
)

bzl_library(
    name = "dom",
    srcs = ["dom.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":parser"],
)

bzl_library(
    name = "serializer",
    srcs = ["serializer.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":dom"],
)

bzl_library(
    name = "builder",
    srcs = ["builder.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [":parser"],
)
