load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "tokenizer",
    srcs = ["tokenizer.bzl"],
    visibility = ["//xml:__subpackages__"],
)

bzl_library(
    name = "parser",
    srcs = ["parser.bzl"],
    visibility = ["//xml:__subpackages__"],
    deps = [":tokenizer"],
)

bzl_library(
    name = "dom",
    srcs = ["dom.bzl"],
    visibility = ["//xml:__subpackages__"],
    deps = [":parser"],
)

bzl_library(
    name = "serializer",
    srcs = ["serializer.bzl"],
    visibility = ["//xml:__subpackages__"],
    deps = [":dom"],
)
